--- a/src/zen_screen/pubspec.yaml
+++ b/src/zen_screen/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   flutter_riverpod: ^2.4.9
   riverpod_annotation: ^2.3.3
   
+  # Navigation
+  go_router: ^12.1.3
+  
   # Database
   sqflite: ^2.3.0
   path: ^1.8.3
