--- a/src/zen_screen/android/gradle.properties
+++ b/src/zen_screen/android/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
-org.gradle.java.home=C:\\Program Files\\Android\\Android Studio\\jbr
+org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
