--- a/src/zen_screen/pubspec.yaml
+++ b/src/zen_screen/pubspec.yaml
@@ -47,6 +47,7 @@ dev_dependencies:
   
   # Testing
   mockito: ^5.4.4
+  sqflite_common_ffi: ^2.3.1
   
   # Linting
   flutter_lints: ^3.0.1
@@ -62,6 +63,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/fonts/
+    - assets/config/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
