--- a/src/zen_screen/pubspec.yaml
+++ b/src/zen_screen/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   shared_preferences: ^2.2.2
   intl: ^0.19.0
   uuid: ^4.2.1
+  connectivity_plus: ^5.0.2
   
 dev_dependencies:
   flutter_test:
