--- a/src/zen_screen/pubspec.yaml
+++ b/src/zen_screen/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   intl: ^0.19.0
   uuid: ^4.2.1
   connectivity_plus: ^5.0.2
+  image_picker: ^1.0.7
+  path_provider: ^2.1.2
+  csv: ^6.0.0
   
 dev_dependencies:
   flutter_test:
