Feature17: Complete implementation and testing - All files synced

--- a/src/zen_screen/android/app/src/main/AndroidManifest.xml
+++ b/src/zen_screen/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Feature 17: Screen Time Usage Stats Permission -->
+    <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS"/>
+    
     <application
         android:label="zen_screen"
         android:name="${applicationName}"
