--- a/src/zen_screen/pubspec.yaml
+++ b/src/zen_screen/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   path_provider: ^2.1.2
   csv: ^6.0.0
   
+  # Screen Time Tracking (Feature 17)
+  app_usage: ^3.0.0
+  permission_handler: ^11.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
